<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
 
    <TextView
        android:id="@+id/textview_masterpassword_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:contentDescription="trigger" />

    <TextView
        android:id="@+id/textview_mainpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textview_masterpassword_text"
        android:layout_below="@+id/textview_masterpassword_text"
        android:text="@string/set_mainpassword" />

    <EditText
        android:id="@+id/edittext_masterpassword_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textview_mainpassword"
        android:layout_alignRight="@+id/textview_mainpassword"
        android:layout_below="@+id/textview_mainpassword"
        android:layout_marginTop="38dp"
        android:ems="10" />
   
    <EditText
        android:id="@+id/edittext_masterpassword_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittext_masterpassword_1"
        android:layout_alignRight="@+id/edittext_masterpassword_1"
        android:layout_below="@+id/edittext_masterpassword_1"
        android:layout_marginTop="72dp"
        android:ems="10" />

    <TextView
        android:id="@+id/textview_pw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittext_masterpassword_1"
        android:layout_below="@+id/textview_mainpassword"
        android:layout_marginTop="16dp"
        android:text="@string/textview_pw1" />
 
    <TextView
        android:id="@+id/textview_pw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edittext_masterpassword_2"
        android:layout_alignLeft="@+id/edittext_masterpassword_2"
        android:layout_marginBottom="42dp"
        android:text="@string/textview_pw2" />

    <Button
        android:id="@+id/button_masterpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_masterpassword_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/button_masterpassword"
        android:onClick="saveMasterPassword" />
 
</RelativeLayout>